# rules_go

examples/proto/lib/: BUILD.bazel  lib.proto
go/private/: repositories.bzl
go/tools/deptool/: BUILD.bazel  main.go
